<resources>
    <string name="app_name">장인의 일터</string>
    <string name="jang_job">장애인 채용</string>
    <string name="NoIn_job">노인 채용</string>
    <string name="talent_Share">재능 나눔 활동</string>
    <string name="edu_Pro">교육 프로그램</string>
    <string name="login">로그인</string>
    <string name="logout"><b>장인</b>님의\n내 <b>일</b>을\n찾아보세요!</string>
    <string name="Jang_job">장애인 채용</string>
    <string name="NoIn_Job">노인 채용</string>
    <string name="Edu_Pro">교육 프로그램</string>
    <string name="Talent_Share">재능 나눔 활동</string>
    <string name="test">장애인 채용</string>
    <string name="노인채용">노인 채용</string>
    <string name="교육프로그램">교육 프로그램</string>
    <string name="재능나눔">재능나눔</string>
    <string name="inputemail">이메일을 입력해주세요.</string>
    <string name="password">비밀번호</string>
    <string name="signup_complete">가입완료</string>
    <string name="SignUp">회원가입</string>
    <string name="load_xml_data">load XML data</string>
    <string name="loc">1.\n원하시는 "<b>"지역"</b>"을\n선택 해주세요!</string>
    <string name="keyword">2.\n원하시는 "<b>"키워드"</b>"를\n적어주세요!</string>
    <string name="search">검색하기</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="id">아이디</string>
    <string name="auto_login">자동 로그인</string>
    <string name="id_search">아이디 찾기</string>
    <string name="password_search">비밀번호 찾기</string>
    <string name="inputpassword">비밀번호를 입력해주세요.</string>
    <string name="otherLogin">다른 방식으로 로그인하기</string>
    <string name="passwordchk">비밀번호 재확인</string>
    <string name="signup_next">다음단계</string>
    <string name="phoneNumber">핸드폰 번호</string>
    <string name="inputPhone">핸드폰 번호를 입력해주세요</string>
    <string name="inputcode">인증 번호를 입력해주세요.</string>
    <string name="getcode">인증번호 받기</string>
    <string name="birthdate">생년월일</string>
    <string name="login_logo"><b>장인</b>의 <b>내 일</b>을 위해</string>
    <string name="main_logo"><b>로그인</b> 후\n<b>장인</b>의 <b>일자리를</b>\n찾아보세요!</string>
    <string name="select_birth">생년월일을 선택해주세요.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="talent_share_key">hbTQ7F%2B3%2BWBpFBdl%2B0AQQ%2BTZs%2FdcIWpgAp6inN2%2BgR1ki44THNW8CLjRyD9l36Q3goAhGTgncXMwfou%2BGlFEXA%3D%3D</string>
    <string name="noin_job_key">hbTQ7F%2B3%2BWBpFBdl%2B0AQQ%2BTZs%2FdcIWpgAp6inN2%2BgR1ki44THNW8CLjRyD9l36Q3goAhGTgncXMwfou%2BGlFEXA%3D%3D</string>

</resources>
