<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    tools:context=".Activity.Search.SearchActivity"
    android:backgroundTint="#FFFFFF">

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:layout_width="226dp"
        android:layout_height="111dp"
        android:layout_marginStart="20dp"
        android:text="@string/loc"
        android:textColor="#74B1C5"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/locbtn"
            android:layout_width="25dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/Edu_Pro" />

        <Button
            android:id="@+id/locbtn2"
            android:layout_width="25dp"
            android:layout_height="80dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:text="@string/Edu_Pro" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1.5dp"
        android:background="#74B1C5" />

    <View
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="106dp"
        android:layout_marginStart="20dp"
        android:text="@string/keyword"
        android:textColor="#74B1C5"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/key"
        android:layout_width="343dp"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:autofillHints="" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="51dp" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

</LinearLayout>
