<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_light"
    android:backgroundTint="#FFFFFF"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/login_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="21dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/img_back" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:paddingBottom="42.5dp"
            android:text="@string/main_logo"
            android:textColor="@color/darkskyblue"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:paddingBottom="42.5dp"
            android:layout_marginTop="40dp"
            android:text="@string/logout"
            android:textColor="@color/darkskyblue"
            android:textSize="26dp"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="42.5dp"
            android:background="@color/darkskyblue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal">

            <!--재능나눔-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:id="@+id/Talent_Share_btn"
                android:layout_marginEnd="12dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/circularbtn_white">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/img_giftshare"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Talent_Share"
                    android:textColor="@color/darkskyblue"
                    android:layout_marginTop="10dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <!--장애인 고용-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:id="@+id/Jang_Job_btn"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/circularbtn_white">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/img_jangin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jang_job"
                    android:textColor="@color/darkskyblue"
                    android:layout_marginTop="10dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:background="@drawable/background_bottomwatercolor"
            android:orientation="horizontal">

            <!--노인 고용-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:layout_marginStart="24dp"
                android:id="@+id/NoIn_Job_btn"
                android:layout_marginEnd="12dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/circularbtn_white">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/img_noin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NoIn_Job"
                    android:textColor="@color/darkskyblue"
                    android:layout_marginTop="10dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <!--교육 프로그램-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:id="@+id/Edu_Pro_btn"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/circularbtn_white">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/img_study"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edu_Pro"
                    android:textColor="@color/darkskyblue"
                    android:layout_marginTop="10dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>